Revert text in-place rather than using a tooltip. Resolves [Issue #6](https://github.com/janetlndavis/degender-the-web/issues/6)
Squashed commit of the following:

commit 09e22bc7c0537fad0c6ea080a23206444c6c0cc1
Author: Janet Davis <davisj@whitman.edu>
Date:   Mon Jul 15 21:04:37 2019 -0700

    Updated the usage instructions in the README.

commit a4bbc815d6d58f149a157c4492e7a41a23cb2fde
Author: Janet Davis <davisj@whitman.edu>
Date:   Mon Jul 15 21:03:36 2019 -0700

    Fix span width at rendered width.

commit ca4e4958675000204d5636b720b8975a82f31884
Author: Janet Davis <davisj@whitman.edu>
Date:   Sat Jul 13 21:44:44 2019 -0700

    Switch from CSS approach to Javascript approach

commit c2f18e9b3861d6acd14dfdb97e0c09195403e37f
Author: Janet Davis <davisj@whitman.edu>
Date:   Sat Jul 13 21:28:42 2019 -0700

    Switched from tooltips to inline replacement

--- a/degender-the-web.css
+++ b/degender-the-web.css
@@ -1,46 +1,6 @@
 /* Source: https://www.w3schools.com/css/css_tooltip.asp */
 
-/* Tooltip container */
-.degendered-pronoun {
-  position: relative;
+span.replacement {
   display: inline-block;
   border-bottom: 1px dashed lightgray;
-}
-
-/* Tooltip text */
-.degendered-pronoun .tooltiptext {
-  visibility: hidden;
-  width: 8ex;
-  bottom: 100%;
-  left: 50%; 
-  margin-left: -5ex; /* Use half of the width to center the tooltip */
-  background-color: gray;
-  color: white;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 1;
-  font-size: normal;
-  font-weight: normal;
-  font-style: normal;
-  opacity: 0.9;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.degendered-pronoun:hover .tooltiptext {
-  visibility: visible;
-}
-
-/* Show a callout arrow at the bottom of the tooltip */
-.degendered-pronoun .tooltiptext::after {
-  content: " ";
-  position: absolute;
-  top: 100%; /* At the bottom of the tooltip */
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: gray transparent transparent transparent;
-  opacity: 0.9;
 }
